# Tecno_Tanks

./: .env  README.md  bullet.py  button.py  database.py  enemy.py  level.py  main.py  path_request.py  player.py  requirements.txt  server.py  settings.py  tile.py  ui.py
Assets/Map_matrix/: EscenarioJuego._Capa de patrones 1.csv  EscenarioJuego._Obstaculos.csv  MapaJuego_Barrera.csv  MapaJuego_Enemigos.csv  MapaJuego_EscenarioJuego.csv  MapaJuego_Objetos.csv  MapaJuego_Obstaculos.csv  MapaJuego_Pasto.csv
Assets/Map_matrix2/: EscenarioJuego._Enemigos.csv  EscenarioJuego._EscenarioJuego.csv  EscenarioJuego._Obstaculos.csv  EscenarioJuego._Pasto.csv
Code/Classes/: estructure_tile.py  level.py  multiplayer_level.py  path_request.py  structure_tile.py  tile.py
Code/Entities/: Explosion.py  bullet.py  enemy.py  entity.py  player.py  powerUp.py
Code/Functions/: A_star.py  support.py
Code/Network/: client.py
Code/UI/: button.py  ui.py
Code/Utilities/: settings.py
haskell/: LICENSE  haskell.cabal
haskell/app/: Main.hs
haskell/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
map/: EscenarioJuego._Obstaculos.csv  EscenarioJuego._Pasto.csv  EscenarioJuego._enemies.csv
