cabal-version:      3.0
name:               haskell
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-2-Clause
license-file:       LICENSE
author:             DylanMA1
maintainer:         dymolina@estudiantec.cr
-- copyright:
category:           Network
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable haskell
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    
      base ^>=4.17.2.1,            
      network,
      bytestring >=0.10,
      aeson >=2.0,
      text >=1.2,
      containers,
      unordered-containers,
      hashable,
      PSQueue,
      vector >=0.12 && <0.14
    hs-source-dirs:   app
    default-language: Haskell2010
